--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   }
 
   .attrDiv {
-    margin: 100px 20px 8px;
+    margin: 100px 20px 4px;
     font-size: 12px;
   }
 
@@ -41,9 +41,13 @@
     align-items: center;
   }
 
-  @media (min-width: 420px) {
+  @media (min-width: 400px) {
     .quoteDiv {
       padding: 0 35px 20px;
+    }
+
+    .attrDiv {
+      margin: 100px 20px 8px;
     }
   }
 
